--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <bodystyle="background-color:aquamarine;">
+  <h1 style ="font-family: Quicksand; font-size: 26px">Self Care Center</h1>
   
     <script type="text/javascript" src="main.js"></script>
   </body>
