--- a/index.html
+++ b/index.html
@@ -6,7 +6,12 @@
   </head>
   <bodystyle="background-color:aquamarine;">
   <h1 style ="font-family: Quicksand; font-size: 26px">Self Care Center</h1>
-  
+  <h2 style="font-family: Quicksand; font-size: 18px">Which type of message?</h2>
     <script type="text/javascript" src="main.js"></script>
+    <div class="container"></div>
+      <div class="box"></div>
+        <h3></h3>
+      </div>
+    </div>
   </body>
 </html>
