--- a/index.html
+++ b/index.html
@@ -9,8 +9,13 @@
   <h2 style="font-family: Quicksand; font-size: 18px">Which type of message?</h2>
     <script type="text/javascript" src="main.js"></script>
     <div class="container"></div>
-      <div class="box"></div>
-        <h3></h3>
+    <div class="wrapper">
+      <div class="box">
+        <label style="background-color:rgb(249, 249, 249);font-family: Quicksand; font-size: 12px">affirmation</label>
+        <label style="background-color:rgb(248, 248, 248);font-family: Quicksand; font-size: 12px">mantra</label>
+      </div>
+        <div class="box2"></div>
+      </div>
       </div>
     </div>
   </body>
