--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <bodystyle="background-color:aquamarine;">
-  <h1 style ="font-family: Quicksand; font-size: 26px">Self Care Center</h1>
-  <h2 style="font-family: Quicksand; font-size: 18px">Which type of message?</h2>
+  <h1 style ="color: #ffffff; font-family: Quicksand; font-size: 26px">✨Self Care Center✨</h1>
+  <h2 style="color: #ffffff; font-family: Quicksand; font-size: 18px">Which type of message?</h2>
     <script type="text/javascript" src="main.js"></script>
     <div class="container"></div>
     <div class="wrapper">
       <div class="box">
-        <label style="background-color:rgb(249, 249, 249);font-family: Quicksand; font-size: 12px">affirmation</label>
-        <label style="background-color:rgb(248, 248, 248);font-family: Quicksand; font-size: 12px">mantra</label>
+        <label style="font-family: Quicksand; font-size: 12px">affirmation</label>
+        <label style="font-family: Quicksand; font-size: 12px">mantra</label>
       </div>
         <div class="box2"></div>
       </div>
