--- a/index.html
+++ b/index.html
@@ -7,26 +7,25 @@
   <bodystyle="background-color:aquamarine;">
   <h1 style ="color: #ffffff; font-family: Quicksand; font-size: 26px">✨Self Care Center✨</h1>
   <h2 style="color: #ffffff; font-family: Quicksand; font-size: 18px">Which type of message?</h2>
-  <form>
-    <script type="text/javascript" src="main.js"></script>
-    <div class="container"></div>
-    <div class="wrapper">
-      <div class="box">
-        <br>
-        <input name="radios" class="radio1" type="radio" id="message1">
-        <label style="font-family: Quicksand; font-size: 12px">affirmation</label>
-        <input name="radios" class="radio2" type="radio" id="message2">
-        <label style="font-family: Quicksand; font-size: 12px">mantra</label>
-        <br>
-        <button style="color: #ffffff; font-family: Quicksand; font-size: 12px">Receive Message</button>
-      </form>
-      </div>
-    
-        <div class="box2">
-          <img class="icon" src="assets/meditate.svg">
+    <form>
+      <div class="wrapper">
+        <div class="box">
+          <br>
+          <input name="radios" class="radio1" type="radio"    id="message1">
+          <label style="font-family: Quicksand; font-size:    12px">affirmation</label>
+          <input name="radios"class="radio2" type="radio" id="message2">
+          <label style="font-family: Quicksand; font-size: 12px">mantra</label>
+          <br>
+          <button class="button" style="color: #ffffff; font-family: Quicksand; font-size: 12px">Receive Message</button>
         </div>
+        <section>
+        <div class="box2">
+          <p class="upliftingMessage" style="color: black; font-family: Quicksand; font-size: 12px"></p>
+          <img class="icon" src="assets/meditate.svg">
+          </section>
       </div>
       </div>
-    </div>
+    </form>
+    <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
