--- a/index.html
+++ b/index.html
@@ -5,27 +5,47 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <bodystyle="background-color:aquamarine;">
-  <h1 style ="color: #ffffff; font-family: Quicksand; font-size: 26px">✨Self Care Center✨</h1>
-  <h2 style="color: #ffffff; font-family: Quicksand; font-size: 18px">Which type of message?</h2>
+    <h1 style ="color: #ffffff; font-family: Quicksand; font-size: 26px">✨Self Care Center✨</h1>
+    <h2 style="color: #ffffff; font-family: Quicksand; font-size: 18px">Which type of message?</h2>
     <form>
+      <section class="view home-view">
       <div class="wrapper">
+       
         <div class="box">
           <br>
-          <input name="radios" class="radio1" type="radio"    id="message1">
-          <label style="font-family: Quicksand; font-size:    12px">affirmation</label>
-          <input name="radios"class="radio2" type="radio" id="message2">
+          <input name="radios" class="radio1" type="radio" id="message1">
+          <label style="font-family: Quicksand; font-size:12px">affirmation</label>
+          <input name="radios" class="radio2" type="radio" id="message2">
           <label style="font-family: Quicksand; font-size: 12px">mantra</label>
           <br>
           <button class="button" style="color: #ffffff; font-family: Quicksand; font-size: 12px">Receive Message</button>
         </div>
-        <section>
-        <div class="box2">
-          <p class="upliftingMessage" style="color: black; font-family: Quicksand; font-size: 12px"></p>
-          <img class="icon" src="assets/meditate.svg">
-          </section>
-      </div>
       </div>
     </form>
+  <section>
+    <div class="box2">
+      <p class="hidden uplifting-message" style="color: black; font-family: Quicksand; font-size: 20px"></p>
+      <img class="icon" src="assets/meditate.svg">
+      <button class="hidden button favorite-button" id="favoriteMessage" style="color: #ffffff; font-family: Quicksand; font-size: 12px">💖</button>
+      <button class="hidden button view-favorite-button" id="viewFavoriteMessageBtn" style="color: #ffffff; font-family: Quicksand; font-size: 12px">View Favorites</button>   
+    </div>
+    <br>
+    <br>
+    </section>
+  </section>
+      <section class="saved-messages-section"></section>
+      <p class="list" style="color: black; font-family: Quicksand; font-size: 20px"></p>
+    </section>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
+
+<!-- 
+<section class="view saved-view hidden">
+  <section class="saved-covers-section"></section>
+</section>
+
+
+<section class="view saved-view hidden">
+  <section class="saved-covers-section"></section>
+</section> -->
