--- a/index.html
+++ b/index.html
@@ -33,8 +33,12 @@
     <br>
     </section>
   </section>
-      <section class="saved-messages-section"></section>
-      <p class="list" style="color: black; font-family: Quicksand; font-size: 20px"></p>
+  <section class="saved-messages-section"></section>
+  <div class="hidden box3">
+      <p class="list" style="color: black; font-family: Quicksand; font-size: 20px">
+      </p>
+      <button class="hidden home-button" id="viewFavoriteMessageBtn" style="color: #ffffff; font-family: Quicksand; font-size: 12px">Home</button> 
+    </div>
     </section>
     <script type="text/javascript" src="main.js"></script>
   </body>
