--- a/index.html
+++ b/index.html
@@ -26,8 +26,11 @@
     <div class="box2">
       <p class="hidden uplifting-message" style="color: black; font-family: Quicksand; font-size: 20px"></p>
       <img class="icon" src="assets/meditate.svg">
+      <div class ="little-box2">
       <button class="hidden button favorite-button" id="favoriteMessage" style="color: #ffffff; font-family: Quicksand; font-size: 12px">💖</button>
-      <button class="hidden button view-favorite-button" id="viewFavoriteMessageBtn" style="color: #ffffff; font-family: Quicksand; font-size: 12px">View Favorites</button>   
+      <br>
+      <button class="hidden button view-favorite-button" id="viewFavoriteMessageBtn" style="color: #ffffff; font-family: Quicksand; font-size: 12px">View Favorites</button> 
+      </div>  
     </div>
     <br>
     <br>
@@ -45,12 +48,3 @@
   </body>
 </html>
 
-<!-- 
-<section class="view saved-view hidden">
-  <section class="saved-covers-section"></section>
-</section>
-
-
-<section class="view saved-view hidden">
-  <section class="saved-covers-section"></section>
-</section> -->
